Integrated MYSQL logic
auth using mysql done

--- a/Backend/.env
+++ b/Backend/.env
@@ -1,3 +1,9 @@
 PORT=5000
 MONGO_URI=mongodb+srv://manankapkar000:cITRathbI7xfHoY9@cluster0.vtlkall.mongodb.net/OdooHackathon
 JWT_SECRET=yourSuperSecretKey
+
+
+DB_HOST=127.0.0.1
+DB_USER=root
+DB_PASS=manan2005
+DB_NAME=odoo
